# EulerOperator

./: CMakeLists.txt  README.md  data-1-hole.txt  data-2-holes.txt  euler_operator.cpp  euler_operator.h  half_edge_data_structure.h  main.cpp  renderer.cpp  renderer.h  sweep.cpp  sweep.h
